2.2.0-rc.3/_sources/bundled-mibs.rst.txt

.. _bundled-mibs:

Bundled base MIBs
=================

.. warning::

   This page is generated by ``scripts/update_bundled_mibs.py``. Edit the
   manifest, ``pysmi/mibs/bundled_mibs.json``, not this file.

pysmi carries 302 MIB modules of its own, in ``pysmi/mibs/asn1/``. They are
a *source*, not a fallback: they are registered ahead of the sources a caller
configures, and a caller's own copy wins only by carrying a newer
MODULE-IDENTITY revision -- not merely by being the caller's. See
:doc:`/mibdump` for ``--prefer-mib-source`` and ``--no-bundled-mibs``, which
override that outright.

37 of the modules below carry no MODULE-IDENTITY at all, so there is
no revision to compare and the bundled copy is the one that gets used. Every
one of them is a pre-SMIv2 module or an SMI module proper, whose text was fixed
when its RFC was published and cannot be revised except as a new module under a
new name -- so the copy here cannot go stale under a caller who has a better
one. That is the whole reason membership is restricted the way it is below.

Every module below is traceable to where its text came from: cut out of the RFC
that currently defines it, or fetched from IANA's registry, or fetched from the
IEEE 802.1 MIB directory. ``scripts/update_bundled_mibs.py --check`` re-fetches
all of it and reports anything that no longer matches. RFC-sourced entries are
also checked against the RFC Editor for obsoletion, since an RFC's text never
changes but a later RFC can replace it.

Five modules are the exception and are maintained in this repository, listed
under :ref:`bundled-mib-local` below. They are admissible for the same reason
the undated modules above are: their text was frozen -- by an RFC that defined
a macro in prose and shipped no ASN.1, or by a 1994 tool run -- so there is no
upstream for them to fall behind.

16 modules carry a patch, listed under :ref:`bundled-mib-patches` below,
because their published text does not compile as published.

The same modules ship compiled too. A wheel carries ``pysmi/mibs/pysnmp/``,
one pysnmp module per entry below, rendered from the ASN.1 by ``hatch_build.py``
while the wheel is built. A consumer that wants to *load* a standard module
rather than compile it can point pysnmp straight at the package::

   from pysnmp.smi import builder

   mibBuilder = builder.MibBuilder()
   mibBuilder.addMibSources(builder.ZipMibSource("pysmi.mibs.pysnmp"))
   mibBuilder.loadModules("IF-MIB")

Nothing under that directory is in the repository and nothing regenerates it on
a schedule: it is built from the ASN.1 beside it every time a distribution is,
so the two cannot disagree. The ASN.1 stays because it is what the compiler
reads -- resolving an IMPORTS clause means parsing the imported module's source
-- so the compiled form joins it rather than replacing it.

Membership is decided by whether a module's text can silently fall behind --
not by which directory a mirror files it under, and not by whether its
publisher still revises it. MIB collections routinely file CableLabs, DMTF, MEF
and SCTE modules as "standard", and a bundled copy of a module still being
revised out of view could never be told apart from a stale one. A module is
bundled when it has a publisher to re-fetch and diff, or when its text is
frozen and has no upstream left to trail; anything else stays out, however
widely imported, and remains available from https://pysnmp.github.io/mibs/asn1/
as before.

A module its publisher still revises *is* bundled -- IANA's registries and the
IEEE 802.1 directory are tracked at whatever they currently publish, not frozen
at a dated file. Freezing would only make staleness undetectable: the whole
point of ``--check`` is that a revision upstream gets reported, and a caller
who has the newer copy already outranks the bundle on revision.

Inventory
---------

.. csv-table::
   :header: "Module", "Source", "Revision", "Patched"
   :widths: 34, 22, 12, 8

   "ACCOUNTING-CONTROL-MIB", ":rfc:`2513`", "1998-09-28", ""
   "ADSL-LINE-EXT-MIB", ":rfc:`3440`", "2002-12-10", ""
   "ADSL-LINE-MIB", ":rfc:`2662`", "1999-08-19", "yes"
   "ADSL-TC-MIB", ":rfc:`2662`", "1999-08-19", ""
   "ADSL2-LINE-MIB", ":rfc:`4706`", "2006-10-04", ""
   "ADSL2-LINE-TC-MIB", ":rfc:`4706`", "2006-10-04", ""
   "AGENTX-MIB", ":rfc:`2742`", "2000-01-10", ""
   "ALARM-MIB", ":rfc:`3877`", "2004-09-09", ""
   "APPC-MIB", ":rfc:`2051`", "1995-12-15", ""
   "APPLETALK-MIB", ":rfc:`1742`", "--", ""
   "APPLICATION-MIB", ":rfc:`2564`", "1998-11-17", ""
   "APPN-DLUR-MIB", ":rfc:`2232`", "1997-05-10", ""
   "APPN-MIB", ":rfc:`2455`", "1998-07-15", ""
   "APPN-TRAP-MIB", ":rfc:`2456`", "1998-08-31", ""
   "ARC-MIB", ":rfc:`3878`", "2004-09-09", ""
   "ATM-ACCOUNTING-INFORMATION-MIB", ":rfc:`2512`", "1996-11-05", ""
   "ATM-MIB", ":rfc:`2515`", "1998-10-19", ""
   "ATM-TC-MIB", ":rfc:`2514`", "1998-10-19", ""
   "ATM2-MIB", ":rfc:`3606`", "2003-09-23", ""
   "BFD-STD-MIB", ":rfc:`7331`", "2014-08-12", ""
   "BFD-TC-STD-MIB", ":rfc:`7330`", "2014-08-12", ""
   "BGP4-MIB", ":rfc:`4273`", "2006-01-11", ""
   "BRIDGE-MIB", ":rfc:`4188`", "2005-09-19", ""
   "CHARACTER-MIB", ":rfc:`1658`", "1994-05-26", ""
   "CLNS-MIB", ":rfc:`1238`", "--", "yes"
   "COPS-CLIENT-MIB", ":rfc:`2940`", "2000-09-28", ""
   "DECNET-PHIV-MIB", ":rfc:`1559`", "--", ""
   "DIAL-CONTROL-MIB", ":rfc:`2128`", "1996-09-23", ""
   "DIFFSERV-DSCP-TC", ":rfc:`3289`", "2002-05-09", ""
   "DIFFSERV-MIB", ":rfc:`3289`", "2002-02-07", ""
   "DIRECTORY-SERVER-MIB", ":rfc:`2605`", "1999-06-07", ""
   "DISMAN-EVENT-MIB", ":rfc:`2981`", "2000-10-16", ""
   "DISMAN-EXPRESSION-MIB", ":rfc:`2982`", "2000-10-16", ""
   "DISMAN-NSLOOKUP-MIB", ":rfc:`4560`", "2006-06-13", ""
   "DISMAN-PING-MIB", ":rfc:`4560`", "2006-06-13", ""
   "DISMAN-SCHEDULE-MIB", ":rfc:`3231`", "2002-01-07", ""
   "DISMAN-SCRIPT-MIB", ":rfc:`3165`", "2001-08-21", ""
   "DISMAN-TRACEROUTE-MIB", ":rfc:`4560`", "2006-06-13", ""
   "DLSW-MIB", ":rfc:`2024`", "1996-06-04", "yes"
   "DNS-RESOLVER-MIB", ":rfc:`1612`", "1994-01-28", ""
   "DNS-SERVER-MIB", ":rfc:`1611`", "1994-01-28", "yes"
   "DOCS-BPI-MIB", ":rfc:`3083`", "2001-03-13", ""
   "DOCS-CABLE-DEVICE-MIB", ":rfc:`4639`", "2006-12-20", ""
   "DOCS-IETF-BPI2-MIB", ":rfc:`4131`", "2005-07-20", ""
   "DOCS-IETF-CABLE-DEVICE-NOTIFICATION-MIB", ":rfc:`4547`", "2006-05-24", ""
   "DOCS-IETF-QOS-MIB", ":rfc:`4323`", "2006-01-23", ""
   "DOCS-IF-MIB", ":rfc:`4546`", "2006-05-24", ""
   "DOT12-IF-MIB", ":rfc:`2020`", "1996-02-22", ""
   "DOT12-RPTR-MIB", ":rfc:`2266`", "1997-05-19", ""
   "DOT3-OAM-MIB", ":rfc:`4878`", "2007-06-14", ""
   "DS0-MIB", ":rfc:`2494`", "1998-07-16", ""
   "DS0BUNDLE-MIB", ":rfc:`2494`", "1998-07-16", ""
   "DS1-MIB", ":rfc:`4805`", "2007-03-05", ""
   "DS3-MIB", ":rfc:`3896`", "2004-09-08", ""
   "DSA-MIB", ":rfc:`1567`", "1993-11-25", ""
   "EBN-MIB", ":rfc:`2457`", "1998-04-28", ""
   "ENERGY-OBJECT-MIB", ":rfc:`7460`", "2015-02-09", ""
   "ENTITY-MIB", ":rfc:`6933`", "2013-04-05", ""
   "ENTITY-SENSOR-MIB", ":rfc:`3433`", "2002-12-16", ""
   "ENTITY-STATE-MIB", ":rfc:`4268`", "2005-11-22", ""
   "ENTITY-STATE-TC-MIB", ":rfc:`4268`", "2005-11-22", ""
   "ETHER-CHIPSET-MIB", ":rfc:`2666`", "1999-08-24", ""
   "ETHER-WIS", ":rfc:`3637`", "2003-09-19", ""
   "EtherLike-MIB", ":rfc:`3635`", "2003-09-19", ""
   "FC-MGMT-MIB", ":rfc:`4044`", "2005-04-26", ""
   "FCIP-MGMT-MIB", ":rfc:`4404`", "2006-02-06", ""
   "FDDI-SMT73-MIB", ":rfc:`1512`", "--", "yes"
   "FIBRE-CHANNEL-FE-MIB", ":rfc:`2837`", "2000-05-18", ""
   "FLOAT-TC-MIB", ":rfc:`6340`", "2011-07-27", ""
   "FLOW-METER-MIB", ":rfc:`2720`", "1999-10-25", ""
   "FR-ATM-PVC-SERVICE-IWF-MIB", ":rfc:`2955`", "2000-09-28", ""
   "FR-MFR-MIB", ":rfc:`3020`", "2000-11-30", ""
   "FRAME-RELAY-DTE-MIB", ":rfc:`2115`", "1997-05-01", ""
   "FRNETSERV-MIB", ":rfc:`2954`", "2000-09-28", ""
   "GBOND-MIB", ":rfc:`6765`", "2013-02-20", ""
   "HC-ALARM-MIB", ":rfc:`3434`", "2002-12-16", ""
   "HC-PerfHist-TC-MIB", ":rfc:`3705`", "2004-02-03", ""
   "HC-RMON-MIB", ":rfc:`3273`", "2002-05-08", ""
   "HCNUM-TC", ":rfc:`2856`", "2000-06-08", ""
   "HDSL2-SHDSL-LINE-MIB", ":rfc:`4319`", "2005-12-07", ""
   "HOST-RESOURCES-MIB", ":rfc:`2790`", "1999-10-20", ""
   "HOST-RESOURCES-TYPES", ":rfc:`2790`", "2000-03-06", ""
   "HPR-IP-MIB", ":rfc:`2584`", "1998-09-24", ""
   "HPR-MIB", ":rfc:`2238`", "1997-05-14", "yes"
   "IANA-ADDRESS-FAMILY-NUMBERS-MIB", "`IANA <https://www.iana.org/assignments/ianaaddressfamilynumbers-mib/ianaaddressfamilynumbers-mib>`__", "1999-08-26", ""
   "IANA-BFD-TC-STD-MIB", "`IANA <https://www.iana.org/assignments/ianabfdtcstd-mib/ianabfdtcstd-mib>`__", "2025-11-25", ""
   "IANA-CHARSET-MIB", "`IANA <https://www.iana.org/assignments/ianacharset-mib/ianacharset-mib>`__", "2021-01-04", ""
   "IANA-ENTITY-MIB", "`IANA <https://www.iana.org/assignments/ianaentity-mib/ianaentity-mib>`__", "2015-07-16", ""
   "IANA-GBOND-TC-MIB", "`IANA <https://www.iana.org/assignments/ianagbondtc-mib/ianagbondtc-mib>`__", "2017-06-23", ""
   "IANA-GMPLS-TC-MIB", "`IANA <https://www.iana.org/assignments/ianagmplstc-mib/ianagmplstc-mib>`__", "2015-11-04", ""
   "IANA-ITU-ALARM-TC-MIB", "`IANA <https://www.iana.org/assignments/ianaitualarmtc-mib/ianaitualarmtc-mib>`__", "2014-05-22", ""
   "IANA-LANGUAGE-MIB", "`IANA <https://www.iana.org/assignments/ianalanguage-mib/ianalanguage-mib>`__", "2014-05-22", ""
   "IANA-MAU-MIB", "`IANA <https://www.iana.org/assignments/ianamau-mib/ianamau-mib>`__", "2026-07-15", ""
   "IANA-PRINTER-MIB", "`IANA <https://www.iana.org/assignments/ianaprinter-mib/ianaprinter-mib>`__", "2024-02-06", ""
   "IANA-PWE3-MIB", ":rfc:`5601`", "2009-06-11", ""
   "IANA-RTPROTO-MIB", "`IANA <https://www.iana.org/assignments/ianaiprouteprotocol-mib/ianaiprouteprotocol-mib>`__", "2016-04-25", ""
   "IANAPowerStateSet-MIB", "`IANA <https://www.iana.org/assignments/ianapowerstateset-mib/ianapowerstateset-mib>`__", "2015-02-09", ""
   "IANATn3270eTC-MIB", "`IANA <https://www.iana.org/assignments/ianatn3270etc-mib/ianatn3270etc-mib>`__", "2014-05-22", ""
   "IANAifType-MIB", "`IANA <https://www.iana.org/assignments/ianaiftype-mib/ianaiftype-mib>`__", "2026-03-17", ""
   "IEEE8021-BRIDGE-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-BRIDGE-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-CFM-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-CFM-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-CFM-V2-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-CFM-V2-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-CN-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-CN-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-DDCFM-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-DDCFM-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-DEVID-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-DEVID-MIB-201807151904Z.mib>`__", "2018-07-15", ""
   "IEEE8021-ECMP-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-ECMP-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-EVB-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-EVB-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-FQTSS-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-FQTSS-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-MIRP-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-MIRP-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-MSTP-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-MSTP-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-MVRPX-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-MVRPX-MIB-202103050000Z.mib>`__", "2021-03-05", ""
   "IEEE8021-PAE-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-PAE-MIB-200406220000Z.mib>`__", "2004-06-22", ""
   "IEEE8021-PB-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-PB-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-PBB-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-PBB-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-PBBTE-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-PBBTE-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-PE-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-PE-MIB-201201220000Z.mib>`__", "2012-01-22", ""
   "IEEE8021-PFC-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-PFC-MIB-202103050000Z.mib>`__", "2021-03-05", ""
   "IEEE8021-PSFP-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-PSFP-MIB-202309260000Z.mib>`__", "2023-09-26", ""
   "IEEE8021-Preemption-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-Preemption-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-Q-BRIDGE-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-Q-BRIDGE-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-SECY-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-SECY-MIB-202206060000Z.mib>`__", "2022-06-06", ""
   "IEEE8021-SPANNING-TREE-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-SPANNING-TREE-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-SPB-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-SPB-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-SRP-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-SRP-MIB-202309260000Z.mib>`__", "2023-09-26", ""
   "IEEE8021-ST-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-ST-MIB-202309260000Z.mib>`__", "2023-09-26", ""
   "IEEE8021-TC-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-TC-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-TEIPS-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-TEIPS-MIB-201108170000Z.mib>`__", "2011-08-17", ""
   "IEEE8021-TPMR-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-TPMR-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021-TSN-REMOTE-MANAGEMENT-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021-TSN-REMOTE-MANAGEMENT-MIB-202211080000Z.mib>`__", "2022-11-08", ""
   "IEEE8021X-PAE-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8021X-PAE-MIB-202002181507Z.mib>`__", "2020-02-18", ""
   "IEEE8023-LAG-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/IEEE8023-LAG-MIB-201610120000Z.mib>`__", "2016-10-12", ""
   "IF-INVERTED-STACK-MIB", ":rfc:`2864`", "2000-06-14", ""
   "IF-MIB", ":rfc:`2863`", "2000-06-14", ""
   "IGMP-STD-MIB", ":rfc:`2933`", "2000-09-28", ""
   "INET-ADDRESS-MIB", ":rfc:`4001`", "2005-02-04", ""
   "INTEGRATED-SERVICES-GUARANTEED-MIB", ":rfc:`2214`", "1995-11-03", ""
   "INTEGRATED-SERVICES-MIB", ":rfc:`2213`", "1995-11-03", "yes"
   "INTERFACETOPN-MIB", ":rfc:`3144`", "2001-03-27", ""
   "IP-FORWARD-MIB", ":rfc:`4292`", "2006-02-01", ""
   "IP-MIB", ":rfc:`4293`", "2006-02-02", ""
   "IPATM-IPMC-MIB", ":rfc:`2417`", "1998-09-01", "yes"
   "IPMCAST-MIB", ":rfc:`5132`", "2007-11-09", ""
   "IPMROUTE-STD-MIB", ":rfc:`2932`", "2000-09-22", ""
   "IPOA-MIB", ":rfc:`2320`", "1998-02-09", ""
   "IPV6-FLOW-LABEL-MIB", ":rfc:`3595`", "2003-08-28", ""
   "IPV6-MIB", ":rfc:`8096`", "1998-02-05", ""
   "IPV6-MLD-MIB", ":rfc:`3019`", "2001-01-25", ""
   "IPV6-TC", ":rfc:`8096`", "--", ""
   "ISDN-MIB", ":rfc:`2127`", "1996-09-23", ""
   "ISIS-MIB", ":rfc:`4444`", "2006-04-04", ""
   "ITU-ALARM-MIB", ":rfc:`3877`", "2004-09-09", ""
   "ITU-ALARM-TC-MIB", ":rfc:`3877`", "2004-09-09", ""
   "Job-Monitoring-MIB", ":rfc:`2707`", "1999-02-19", ""
   "LANGTAG-TC-MIB", ":rfc:`5131`", "2007-11-09", ""
   "LISP-MIB", ":rfc:`7052`", "2013-10-21", ""
   "LLDP-EXT-DOT1-EVB-EXTENSIONS-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/LLDP-EXT-DOT1-EVB-EXTENSIONS-MIB-201806210000Z.mib>`__", "2018-06-21", ""
   "LLDP-EXT-DOT1-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/LLDP-EXT-DOT1-MIB-200505060000Z.mib>`__", "2005-05-06", ""
   "LLDP-EXT-DOT1-V2-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/LLDP-EXT-DOT1-V2-MIB-201806210000Z.mib>`__", "2018-06-21", ""
   "LLDP-EXT-DOT3-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/LLDP-EXT-DOT3-MIB-200505060000Z.mib>`__", "2005-05-06", ""
   "LLDP-EXT-DOT3-V2-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/LLDP-EXT-DOT3-V2-MIB-200906080000Z.mib>`__", "2009-06-08", ""
   "LLDP-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/LLDP-MIB-200505060000Z.mib>`__", "2005-05-06", ""
   "LLDP-V2-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/LLDP-V2-MIB-201603110000Z.mib>`__", "2016-03-11", ""
   "LLDP-V2-TC-MIB", "`IEEE 802.1 <https://www.ieee802.org/1/files/public/MIBs/LLDP-V2-TC-MIB-201603110000Z.mib>`__", "2016-03-11", ""
   "MAU-MIB", ":rfc:`4836`", "2007-04-21", ""
   "MGMD-STD-MIB", ":rfc:`5519`", "2009-03-30", ""
   "MIOX25-MIB", ":rfc:`1461`", "--", ""
   "MIP-MIB", ":rfc:`2006`", "1996-06-04", "yes"
   "MPLS-ID-STD-MIB", ":rfc:`7453`", "2015-02-02", ""
   "MPLS-L3VPN-STD-MIB", ":rfc:`4382`", "2006-01-23", ""
   "MPLS-LDP-GENERIC-STD-MIB", ":rfc:`3815`", "2004-06-03", ""
   "MPLS-LDP-STD-MIB", ":rfc:`3815`", "2004-06-03", ""
   "MPLS-LSR-STD-MIB", ":rfc:`3813`", "2004-06-03", ""
   "MPLS-TC-EXT-STD-MIB", ":rfc:`7453`", "2015-02-02", ""
   "MPLS-TC-STD-MIB", ":rfc:`3811`", "2004-06-03", ""
   "MPLS-TE-STD-MIB", ":rfc:`3812`", "2004-06-03", ""
   "MSDP-MIB", ":rfc:`4624`", "2006-08-01", ""
   "MTA-MIB", ":rfc:`2789`", "2000-03-03", ""
   "Modem-MIB", ":rfc:`1696`", "1994-06-12", "yes"
   "NAT-MIB", ":rfc:`7658`", "2015-10-02", ""
   "NETWORK-SERVICES-MIB", ":rfc:`2788`", "2000-03-03", ""
   "NHRP-MIB", ":rfc:`2677`", "1999-08-26", ""
   "NOTIFICATION-LOG-MIB", ":rfc:`3014`", "2000-11-27", ""
   "NTPv4-MIB", ":rfc:`5907`", "2010-05-17", ""
   "OSPF-MIB", ":rfc:`4750`", "2006-11-10", ""
   "OSPF-TRAP-MIB", ":rfc:`4750`", "2006-11-10", ""
   "OSPFV3-MIB", ":rfc:`5643`", "2009-08-13", ""
   "P-BRIDGE-MIB", ":rfc:`4363`", "2006-01-09", ""
   "PARALLEL-MIB", ":rfc:`1660`", "1994-05-26", ""
   "PIM-BSR-MIB", ":rfc:`5240`", "2008-05-28", ""
   "PIM-MIB", ":rfc:`2934`", "2000-09-28", ""
   "PIM-STD-MIB", ":rfc:`5060`", "2007-11-02", ""
   "PINT-MIB", ":rfc:`3055`", "2001-02-01", ""
   "POWER-ETHERNET-MIB", ":rfc:`3621`", "2003-11-24", ""
   "PPP-BRIDGE-NCP-MIB", ":rfc:`1474`", "--", ""
   "PPP-IP-NCP-MIB", ":rfc:`1473`", "--", ""
   "PPP-LCP-MIB", ":rfc:`1471`", "--", ""
   "PPP-SEC-MIB", ":rfc:`1472`", "--", ""
   "PTOPO-MIB", ":rfc:`2922`", "2000-09-21", ""
   "PW-STD-MIB", ":rfc:`5601`", "2009-06-11", ""
   "PW-TC-STD-MIB", ":rfc:`5542`", "2009-04-21", ""
   "PerfHist-TC-MIB", ":rfc:`3593`", "2003-08-13", ""
   "Printer-MIB", ":rfc:`3805`", "2004-06-02", ""
   "Q-BRIDGE-MIB", ":rfc:`4363`", "2006-01-09", ""
   "RADIUS-ACC-CLIENT-MIB", ":rfc:`4670`", "2006-08-21", ""
   "RADIUS-ACC-SERVER-MIB", ":rfc:`4671`", "2006-08-21", ""
   "RADIUS-AUTH-CLIENT-MIB", ":rfc:`4668`", "2006-08-21", ""
   "RADIUS-AUTH-SERVER-MIB", ":rfc:`4669`", "2006-08-21", ""
   "RADIUS-DYNAUTH-SERVER-MIB", ":rfc:`4673`", "2006-08-29", ""
   "RDBMS-MIB", ":rfc:`1697`", "1994-06-15", ""
   "RFC-1212", "maintained here", "--", ""
   "RFC-1215", "maintained here", "--", ""
   "RFC1065-SMI", ":rfc:`1065`", "--", ""
   "RFC1155-SMI", ":rfc:`1155`", "--", ""
   "RFC1158-MIB", ":rfc:`1158`", "--", ""
   "RFC1213-MIB", ":rfc:`1213`", "--", ""
   "RFC1253-MIB", ":rfc:`1253`", "--", ""
   "RFC1269-MIB", ":rfc:`1269`", "--", ""
   "RFC1271-MIB", ":rfc:`1271`", "--", ""
   "RFC1284-MIB", ":rfc:`1284`", "--", ""
   "RFC1285-MIB", ":rfc:`1285`", "--", ""
   "RFC1315-MIB", ":rfc:`1315`", "--", "yes"
   "RFC1316-MIB", ":rfc:`1316`", "--", "yes"
   "RFC1381-MIB", ":rfc:`1381`", "--", ""
   "RFC1382-MIB", ":rfc:`1382`", "--", ""
   "RFC1389-MIB", ":rfc:`1389`", "--", ""
   "RFC1406-MIB", ":rfc:`1406`", "--", ""
   "RFC1414-MIB", ":rfc:`1414`", "--", "yes"
   "RIPv2-MIB", ":rfc:`1724`", "1994-07-27", ""
   "RMON-MIB", ":rfc:`2819`", "2000-05-11", ""
   "RMON2-MIB", ":rfc:`4502`", "2006-05-02", ""
   "RS-232-MIB", ":rfc:`1659`", "1994-05-26", ""
   "RSTP-MIB", ":rfc:`4318`", "2005-12-07", ""
   "RSVP-MIB", ":rfc:`2206`", "1995-11-03", ""
   "RTP-MIB", ":rfc:`2959`", "2000-10-02", ""
   "SCTP-MIB", ":rfc:`3873`", "2004-09-02", ""
   "SIP-MIB", ":rfc:`1694`", "1994-03-31", ""
   "SLAPM-MIB", ":rfc:`2758`", "2000-01-24", ""
   "SMON-MIB", ":rfc:`2613`", "1998-12-16", ""
   "SMUX-MIB", ":rfc:`1227`", "--", "yes"
   "SNA-NAU-MIB", ":rfc:`1666`", "1994-05-12", "yes"
   "SNA-SDLC-MIB", ":rfc:`1747`", "1994-11-15", ""
   "SNMP-COMMUNITY-MIB", ":rfc:`3584`", "2003-08-06", ""
   "SNMP-FRAMEWORK-MIB", ":rfc:`3411`", "2002-10-14", ""
   "SNMP-MPD-MIB", ":rfc:`3412`", "2002-10-14", ""
   "SNMP-NOTIFICATION-MIB", ":rfc:`3413`", "2002-10-14", ""
   "SNMP-PROXY-MIB", ":rfc:`3413`", "2002-10-14", ""
   "SNMP-REPEATER-MIB", ":rfc:`2108`", "1996-09-14", ""
   "SNMP-TARGET-MIB", ":rfc:`3413`", "2002-10-14", ""
   "SNMP-TLS-TM-MIB", ":rfc:`9456`", "2023-11-08", ""
   "SNMP-TSM-MIB", ":rfc:`5591`", "2009-06-09", ""
   "SNMP-USER-BASED-SM-MIB", ":rfc:`3414`", "2002-10-16", ""
   "SNMP-USM-AES-MIB", ":rfc:`3826`", "2004-06-14", ""
   "SNMP-USM-DH-OBJECTS-MIB", ":rfc:`2786`", "2000-03-06", ""
   "SNMP-USM-HMAC-SHA2-MIB", ":rfc:`7860`", "2016-04-18", ""
   "SNMP-VIEW-BASED-ACM-MIB", ":rfc:`3415`", "2002-10-16", ""
   "SNMPv2-CONF", ":rfc:`2580`", "--", ""
   "SNMPv2-CONF-v1", "maintained here", "--", ""
   "SNMPv2-MIB", ":rfc:`3418`", "2002-10-16", ""
   "SNMPv2-SMI", ":rfc:`2578`", "--", ""
   "SNMPv2-SMI-v1", "maintained here", "--", ""
   "SNMPv2-TC", ":rfc:`2579`", "--", ""
   "SNMPv2-TC-v1", "maintained here", "--", ""
   "SNMPv2-TM", ":rfc:`3417`", "2002-10-16", ""
   "SNMPv2-USEC-MIB", ":rfc:`1910`", "1996-01-12", ""
   "SONET-MIB", ":rfc:`3592`", "2003-08-11", ""
   "SOURCE-ROUTING-MIB", ":rfc:`1525`", "--", ""
   "SYSAPPL-MIB", ":rfc:`2287`", "1997-10-20", ""
   "SYSLOG-TC-MIB", ":rfc:`5427`", "2009-03-30", ""
   "T11-FC-FABRIC-ADDR-MGR-MIB", ":rfc:`4439`", "2006-03-02", ""
   "T11-FC-FABRIC-CONFIG-SERVER-MIB", ":rfc:`4935`", "2007-06-27", ""
   "T11-FC-FABRIC-LOCK-MIB", ":rfc:`4936`", "2007-06-27", ""
   "T11-FC-FSPF-MIB", ":rfc:`4626`", "2006-08-14", ""
   "T11-FC-NAME-SERVER-MIB", ":rfc:`4438`", "2006-03-02", ""
   "T11-FC-ROUTE-MIB", ":rfc:`4625`", "2006-08-14", ""
   "T11-FC-RSCN-MIB", ":rfc:`4983`", "2007-01-08", ""
   "T11-FC-SP-AUTHENTICATION-MIB", ":rfc:`5324`", "2008-08-20", ""
   "T11-FC-SP-POLICY-MIB", ":rfc:`5324`", "2008-08-20", ""
   "T11-FC-SP-SA-MIB", ":rfc:`5324`", "2008-08-20", ""
   "T11-FC-SP-TC-MIB", ":rfc:`5324`", "2008-08-20", ""
   "T11-FC-SP-ZONING-MIB", ":rfc:`5324`", "2008-08-20", ""
   "T11-FC-VIRTUAL-FABRIC-MIB", ":rfc:`4747`", "2006-11-10", ""
   "T11-FC-ZONE-SERVER-MIB", ":rfc:`4936`", "2007-06-27", ""
   "T11-TC-MIB", ":rfc:`4439`", "2006-03-02", ""
   "TCP-MIB", ":rfc:`4022`", "1994-11-01", ""
   "TN3270E-MIB", ":rfc:`2561`", "1998-07-27", ""
   "TN3270E-RT-MIB", ":rfc:`2562`", "1998-07-27", ""
   "TOKEN-RING-RMON-MIB", ":rfc:`1513`", "--", ""
   "TOKENRING-MIB", ":rfc:`1748`", "1994-10-23", ""
   "TOKENRING-STATION-SR-MIB", ":rfc:`1749`", "1994-12-16", ""
   "TRANSPORT-ADDRESS-MIB", ":rfc:`3419`", "2002-11-01", ""
   "TUNNEL-MIB", ":rfc:`4087`", "2005-05-16", ""
   "UDP-MIB", ":rfc:`4113`", "2005-05-20", ""
   "UPS-MIB", ":rfc:`1628`", "1994-02-23", "yes"
   "URI-TC-MIB", ":rfc:`5017`", "2007-09-10", ""
   "UUID-TC-MIB", ":rfc:`6933`", "2013-04-05", ""
   "VDSL-LINE-MIB", ":rfc:`3728`", "2004-02-19", ""
   "VDSL2-LINE-MIB", ":rfc:`5650`", "2009-09-30", ""
   "VDSL2-LINE-TC-MIB", ":rfc:`5650`", "2009-09-30", ""
   "VPN-TC-STD-MIB", ":rfc:`4265`", "2005-11-15", ""
   "VRRP-MIB", ":rfc:`2787`", "2000-03-03", ""
   "VRRPV3-MIB", ":rfc:`6527`", "2012-02-13", ""
   "WWW-MIB", ":rfc:`2594`", "1999-02-25", ""

.. _bundled-mib-patches:

Patched modules
---------------

The published text of these modules does not compile. Each is bundled as its
publisher's text with a patch applied, kept in ``scripts/mib-patches/`` and
re-applied on every refresh; a patch whose context has moved makes the refresh
fail rather than silently fuzzing. The defect each one repairs:

``ADSL-LINE-MIB``
    RFC 2662 carries a truncated ``MIN-ACCESS  read-wr`` line, orphaned in the published text.

``CLNS-MIB``
    RFC 1238 imports PhysAddress ``FROM RFC-1213``, a module name nothing publishes; the same IMPORTS clause spells RFC1155-SMI correctly.

``DLSW-MIB``
    RFC 2024 anchors the module under mib-2 but never imports it.

``DNS-SERVER-MIB``
    RFC 1611 imports from ``RFC-1213``, a module name nothing publishes, and gives INTEGER objects octet-count DISPLAY-HINTs.

``FDDI-SMT73-MIB``
    RFC 1512 anchors the module under transmission but never imports it.

``HPR-MIB``
    RFC 2238 gives LAST-UPDATED a 12-digit value that is neither form RFC 2578 allows, and one comment line lost its leading ``--``.

``INTEGRATED-SERVICES-MIB``
    RFC 2213 uses TestAndIncr without importing it, and puts a numeric DISPLAY-HINT on an OCTET STRING.

``IPATM-IPMC-MIB``
    RFC 2417 anchors marsMIB under mib-2 but never imports it.

``MIP-MIB``
    RFC 2006 omits mib-2, Unsigned32 and NOTIFICATION-GROUP from IMPORTS, gives a plain object accessible-for-notify, and misspells mipSecNotificationsGroup.

``Modem-MIB``
    RFC 1696 spells the module's own root mdmMIB in one OID and mdmMib everywhere else, leaving the OID tree self-referential.

``RFC1315-MIB``
    RFC 1315 imports TimeTicks ``FROM RFC-1155``, a module name nothing publishes; the same IMPORTS clause spells RFC1213-MIB correctly.

``RFC1316-MIB``
    RFC 1316 uses mib-2 without importing it.

``RFC1414-MIB``
    RFC 1414 uses mib-2 without importing it.

``SMUX-MIB``
    RFC 1227 imports OBJECT-TYPE ``FROM RFC1212``, a module name nothing publishes -- the bundled compat module is RFC-1212.

``SNA-NAU-MIB``
    RFC 1666 uses mib-2 without importing it.

``UPS-MIB``
    RFC 1628 omits mib-2 and TEXTUAL-CONVENTION from IMPORTS, and bounds two objects at 2147483648, one past the top of Integer32.

.. _bundled-mib-local:

Modules maintained here
-----------------------

These five have no publisher to fetch from, so ``--check`` skips them and the
copy in this repository is the only one. That is admissible because none of
them has an upstream to fall behind: two are macros an RFC defined in prose
without ever shipping ASN.1, and three are a 1994 tool's SNMPv1 rendering of
SMIv2 base modules that the SMIv2 RFCs went on to obsolete. Nothing will revise
any of them. Why each is here:

``RFC-1212``
    RFC 1212 defines the OBJECT-TYPE macro in prose, not as an ASN.1 module; no publisher ships one, so this compat module is maintained here.

``RFC-1215``
    RFC 1215 defines the TRAP-TYPE macro in prose, not as an ASN.1 module; no publisher ships one, so this compat module is maintained here.

``SNMPv2-CONF-v1``
    SMIC's 1994 SNMPv1 rendering of RFC 1444's conformance macros, which have no SNMPv1 equivalent -- so the module is empty and defines nothing. Bundled because SMIC-converted MIBs name it in their IMPORTS and no publisher ships it under its own name; the mirror carries it only inside SNMPv2-TC-v1, where nothing looking for it by module name can find it.

``SNMPv2-SMI-v1``
    SMIC's 1994 SNMPv1 rendering of RFC 1442's SMI, which RFC 1902 and then RFC 2578 obsoleted; no publisher ships it, so this compat module is maintained here.

``SNMPv2-TC-v1``
    SMIC's 1994 SNMPv1 rendering of RFC 1443's textual conventions, which RFC 1903 and then RFC 2579 obsoleted; no publisher ships it, so this compat module is maintained here. The mirror serves it concatenated with SNMPv2-CONF-v1, which is bundled as its own file so that each file here holds exactly one module.

.. _bundled-mib-historical:

Modules pinned to an obsoleted RFC
----------------------------------

An obsoleted RFC is not on its own a stale pin. For these modules the successor
RFC publishes the replacement under a *different* module name, so the pinned
RFC is the only one that ever defined the module named here and pinning it
there is the only thing that can be right. Each successor below has been looked
at and recorded in the manifest, so ``--check`` does not report it again -- a
successor nobody has looked at yet still is.

Two of them were not replaced by one module. RFC 1213's MIB-II, and RFC 1158's
before it, were split up: ``system`` and ``snmp`` went to ``SNMPv2-MIB``,
``interfaces`` to ``IF-MIB``, ``at``, ``ip`` and ``icmp`` to ``IP-MIB``, ``tcp``
to ``TCP-MIB``, ``udp`` to ``UDP-MIB``, while ``egp`` and ``transmission`` were
left with no successor to name. Their manifest entries carry that split as a
per-subtree map, and :py:func:`pysmi.mibs.successor_for` answers from it -- so a
caller holding an OID an old agent reported can be told which module defines it
now, rather than only that the module it came from is gone.

``DSA-MIB``
    obsoleted by RFC 2605, which publishes ``DIRECTORY-SERVER-MIB``.

``FIBRE-CHANNEL-FE-MIB``
    obsoleted by RFC 4044, which publishes ``FC-MGMT-MIB``.

``IGMP-STD-MIB``
    obsoleted by RFC 5519, which publishes ``MGMD-STD-MIB``.

``IPMROUTE-STD-MIB``
    obsoleted by RFC 5132, which publishes ``IPMCAST-MIB``.

``IPV6-MLD-MIB``
    obsoleted by RFC 5519, which publishes ``MGMD-STD-MIB``.

``RFC1065-SMI``
    obsoleted by RFC 1155, which publishes ``RFC1155-SMI``.

``RFC1158-MIB``
    obsoleted by RFC 1213, which publishes ``RFC1213-MIB``.

``RFC1253-MIB``
    obsoleted by RFC 1850, which publishes ``OSPF-MIB``.

``RFC1269-MIB``
    obsoleted by RFC 4273, which publishes ``BGP4-MIB``.

``RFC1271-MIB``
    obsoleted by RFC 1757, which publishes ``RMON-MIB``.

``RFC1284-MIB``
    obsoleted by RFC 1398, which publishes ``RFC1398-MIB``.

``RFC1315-MIB``
    obsoleted by RFC 2115, which publishes ``FRAME-RELAY-DTE-MIB``.

``RFC1316-MIB``
    obsoleted by RFC 1658, which publishes ``CHARACTER-MIB``.

``RFC1389-MIB``
    obsoleted by RFC 1724, which publishes ``RIPv2-MIB``.

``RFC1406-MIB``
    obsoleted by RFC 2495, which publishes ``DS1-MIB``.

``VRRP-MIB``
    obsoleted by RFC 6527, which publishes ``VRRPV3-MIB``.


Not bundled
-----------

Membership turns on what other modules have to import to compile, not on how a
collection files a module. A module rooted under ``enterprises`` is not that,
whoever publishes it. CableLabs' ``DOCS-*`` and ``CLAB-*`` sit under
``enterprises 4491``, SCTE's ``SCTE-HMS-*`` under 5591, MEF's ``MEF-*`` under
15007; across the 5,500 modules at https://pysnmp.github.io/mibs/, three of the
eighteen CableLabs modules are imported from outside their own directory and
none of the SCTE or MEF ones are at all. That is why they are left out.
Publisher availability is not the reason and should not be read as one:
CableLabs publishes at https://mibs.cablelabs.com/MIBs/, free and live, and 14
of those 18 can be fetched there today.

Where the publisher itself is gone or paywalled the modules are out on that
ground as well -- ATM Forum, DMTF, IEC. So are draft-named predecessors of
modules the IETF went on to publish under a different name: ``MPLS-LSR-MIB``
for ``MPLS-LSR-STD-MIB``, ``IGMP-MIB`` for ``IGMP-STD-MIB``, and so on. Two
modules are left out despite having an RFC: ``COFFEE-POT-MIB`` (RFC 2325, an
April Fools' RFC whose ASN.1 does not parse) and ``TCPIPX-MIB`` (RFC 1792,
rooted under ``enterprises`` and so a vendor module in any case).

All of them remain available from https://pysnmp.github.io/mibs/asn1/, which is
where pysmi looks by default.
